Fix #2091 Adjust footer styles on smaller screens
Adjust footer by adding 30px padding to match expected behavior on smaller screens

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -686,10 +686,7 @@ textarea {
   }
   
   .oppia-footer-container {
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 80px 30px 30px;
+    padding: 30px;
   }
 
 }
